hphp/test/slow/async/return-annotation-6.php.expectf
Fatal error: Return type hint for async closure must be awaitable in %s on line 2
